--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     </head> 
     <body>
 
+        <img src="img/barbeiro.jpg" alt="banner da Barbearia">        
         
         <h1> Sobre a Barbearia Alura </h1>
         
