--- a/index.html
+++ b/index.html
@@ -10,10 +10,15 @@
     </head> 
     <body>
 
+        <header>
+            <h2>"título-principal">BarbeariaAlura<header</h2>>
+        </header>
+
         <img src="img/barbeiro.jpg" alt="banner da Barbearia">        
         
-        <div> class = "Principal"
-            <h1> Sobre a Barbearia Alura </h1>
+        <div> class="Principal" >
+
+            <h2> Sobre a Barbearia Alura </h2>
         
             <p>Localizada no coração da cidade a <strong> Barbearia Alura </strong> traz para o mercado o que há de melhor para o seu cabelo e barba. Fundada em 2019, a Barbearia Alura já é destaque na cidade e conquista novos clientes a cada dia.
             </p>
