--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
         <header>
             <h1 class="titulo-principal">Barbearia Alura</h1>
         </header>
-        <img id="banner" src="banner.jpg">
+
+        <img src="img/banner.jpg" alt="Banner da barbearia">
+
         <div class="principal">
             <h2 class="titulo-centralizado">Sobre a Barbearia Alura</h2>
 
@@ -35,8 +37,8 @@
             <li class="itens">Profissionais Qualificados</li>
         </ul>
 
-         <img src="beneficios.jpg" class="imagembeneficios"
-        </div>
+        <img src="img/beneficios.jpg" alt="Benefícios da Barbearia"  class="imagembeneficios"   >        
+    </div>
 
     </body>
 </html>
