--- a/produtos.html
+++ b/produtos.html
@@ -3,15 +3,20 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width">
-        <title>Produtos - Barbearia Alura</title>
-        <link rel="stylesheet" href="reset.css">
-        <link rel="stylesheet" href="style.css">
-        <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
+        <title>Contato | Barbearia Alura</title>
+        <link rel="stylesheet" href="assets/css/reset.css">
+        <link rel="stylesheet" href="assets/css/header.css">
+        <link rel="stylesheet" href="assets/css/footer.css">
+        <link rel="stylesheet" href="assets/css/contato.css">
+        <link rel="stylesheet" href="assets/css/medias.css">
+        <link rel="stylesheet" href="assets/css/body.css">
+        <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
     </head>
     <body>
         <header>
+            <a href="#conteudoPrincipal">Pular para o conteúdo principal</a>
             <div class="caixa">
-                <h1><img src="img/logo.png" alt="Logo Da Barbearia Alura"></h1>
+                <h1><img src="assets/img/logo.png" alt="Logo da barbearia Alura"></h1>
                 <nav>
                     <ul>
                         <li><a href="index.html">Home</a></li>
@@ -21,31 +26,74 @@
                 </nav>
             </div>
         </header>
+
         <main>
-            <ul class=produtos>
-                <li>
-                    <h2>Cabelo</h2>
-                    <img src="img/cabelo.jpg" class="imagem-produtos">
-                    <p class="produto-descricao">Na tesoura ou máquina, como o cliente preferir</p>
-                    <p class="produto-preco">R$25,00</p>
-                </li>
-                <li>
-                    <h2>Barba</h2>
-                    <img src="img/barba.jpg" class="imagem-produtos">
-                    <p class="produto-descricao">Corte e desenho profissional de barba</p>
-                    <p class="produto-preco">R$18,00</p>
-                </li>
-                <li>
-                    <h2>Cabelo + Barba</h2>
-                    <img src="img/cabelo+barba.jpg" class="imagem-produtos">
-                    <p class="produto-descricao">Corte completo de cabelo e barba</p>
-                    <p class="produto-preco">R$35,00</p>
-                </li>
-            </ul>
+            <form>
+                <fieldset>
+                    <label for="nome-sobrenome">Nome e Sobrenome</label>
+                    <input type="text" id="nome-sobrenome" class="input-padrao" required>
+
+                    <label for="telefone">Telefone</label>
+                    <input type="tel" id="telefone" class="input-padrao" placeholder="(XX) XXXXX-XXXX"required>
+
+                    <label for="email">E-mail</label>
+                    <input type="email" id="email" class="input-padrao" placeholder="seuemail@seudomínio.com" required>
+
+                    <label for="mensagem">Mensagem</label>
+                    <textarea cols="75" rows="10" id="mensagem" class="input-padrao" required></textarea>
+                </fieldset>
+
+                <fieldset>    
+                    <legend>Como prefere nosso contato?</legend>
+                    <label for="radio-email"><input type="radio" name="contato" value="email" id="radio-email">E-mail</label>
+                    
+
+                    <label for="radio-telefone"> <input type="radio" name="contato" value="telefone" id="radio-telefone">Telefone</label>
+                
+
+                    <label for="radio-whatsapp"><input type="radio" name="contato" value="whatsapp" id="radio-whatsapp" checked>WhatsApp</label>
+                </fieldset>
+
+                <fieldset>
+                    <legend>Qual horário prefere ser atendido?</legend>
+                    <select>
+                        <option>Manhã</option>
+                        <option>Tarde</option>
+                        <option>Noite</option>
+                    </select>
+                </fieldset>
+
+                <label for="checkbox"><input type="checkbox" class="checkbox" checked id="checkbox"> Gostaria de receber nossas novidades por e-mail?</label>
+
+                <input type="submit" value="Enviar formulário" class="enviar">
+            </form>
+
+            <table>
+                <thead>
+                    <tr>
+                        <th>Dia</th>
+                        <th>Horário</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>Segunda-feira</td>
+                        <td>08h às 20h</td>
+                    </tr>
+                    <tr>
+                        <td>Quarta-feira</td>
+                        <td>08h às 20h</td>
+                    </tr>
+                    <tr>
+                        <td>Sexta-feira</td>
+                        <td>08h às 20h</td>
+                    </tr>
+                </tbody>
+            </table>
         </main>
         <footer>
-            <img src="img/logo-branco.png">
-            <p class="copyright">&copy; Copyright Barbearia Alura - 2022</p>
+            <img src="assets/img/logo-branco.png" alt="Logo da barbearia Alura">
+            <p class="Copyright">&copy;Copyright Barbearia Alura - 2021</p>
         </footer>
     </body>
 </html>
