--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <header>
             <a href="#conteudoPrincipal">Pular para o conteúdo principal</a>
             <div class="caixa">
-                <img src="assets/img/logo.png" alt="Logo barbearia Alura">
+                <img src="img/logo.png" alt="Logo barbearia Alura">
                 <nav>
                     <ul>
                         <li>
@@ -34,11 +34,11 @@
                 </nav>
             </div>
         </header>
-        <img class="banner"src="assets/img/banner.jpg" alt>
+        <img class="banner"src="img/banner.jpg" alt>
         <main>
             <section class="principal">
                 <h1 class="titulo-principal" id="conteudoPrincipal">Sobre a Barbearia Alura</h1>
-                <img class="utensilios" src="assets/img/utensilios.jpg" alt="Utensilios de um barbeiro">
+                <img class="utensilios" src="img/utensilios.jpg" alt="Utensilios de um barbeiro">
                 <h2> Localizada no coração da cidade a <strong>Barbearia Alura</strong> traz para o mercado o que há de melhor para o seu cabelo e barba. Fundada em 2019, a Barbearia Alura já é destaque na cidade e conquista novos clientes a cada dia.</h2>
 
                 <h2 id="missao"><em>Nossa missão é: <strong>"Proporcionar auto-estima e qualidade de vida aos clientes".</strong></em></h2>
@@ -63,7 +63,7 @@
                         <li class="itens">Profissionais Qualificados</li>
                         <li class="itens">Pontualidade</li>
                         <li class="itens">Limpeza</li>
-                    </ul><img class="imagem-beneficios" src="assets/img/beneficios.jpg" alt="Benefícios da Barbearia Alura">
+                    </ul><img class="imagem-beneficios" src="img/beneficios.jpg" alt="Benefícios da Barbearia Alura">
                 </div>
                 <div class="video">
                     <iframe width="100%" height="315" src="https://www.youtube.com/embed/wcVVXUV0YUY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
@@ -72,7 +72,7 @@
        
         </main>
         <footer>
-            <img src="assets/img/logo-branco.png" alt="Logo da Barbearia Alura">
+            <img src="img/logo-branco.png" alt="Logo da Barbearia Alura">
             <p class="Copyright">&copy;Copyright Barbearia Alura -2021</p>
         </footer>
     </body>
