--- a/produtos.html
+++ b/produtos.html
@@ -92,7 +92,7 @@
             </table>
         </main>
         <footer>
-            <img src="assets/img/logo-branco.png" alt="Logo da barbearia Alura">
+            <img src="img/logo-branco.png" alt="Logo da barbearia Alura">
             <p class="Copyright">&copy;Copyright Barbearia Alura - 2021</p>
         </footer>
     </body>
