--- a/produtos.html
+++ b/produtos.html
@@ -93,7 +93,7 @@
         </main>
         <footer>
             <img src="img/logo-branco.png" alt="Logo da barbearia Alura">
-            <p class="Copyright">&copy;Copyright Barbearia Alura - 2021</p>
+            <p class="Copyright">&copy;Copyright Barbearia Alura - 2023 Fernando Vanelli</p>
         </footer>
     </body>
 </html>
