--- a/contato.html
+++ b/contato.html
@@ -4,19 +4,19 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width">
         <title>Contato | Barbearia Alura</title>
-        <link rel="stylesheet" href="assets/css/reset.css">
-        <link rel="stylesheet" href="assets/css/header.css">
-        <link rel="stylesheet" href="assets/css/footer.css">
-        <link rel="stylesheet" href="assets/css/contato.css">
-        <link rel="stylesheet" href="assets/css/medias.css">
-        <link rel="stylesheet" href="assets/css/body.css">
+        <link rel="stylesheet" href="reset.css">
+        <link rel="stylesheet" href="header.css">
+        <link rel="stylesheet" href="footer.css">
+        <link rel="stylesheet" href="contato.css">
+        <link rel="stylesheet" href="medias.css">
+        <link rel="stylesheet" href="body.css">
         <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
     </head>
     <body>
         <header>
             <a href="#conteudoPrincipal">Pular para o conteúdo principal</a>
             <div class="caixa">
-                <h1><img src="assets/img/logo.png" alt="Logo da barbearia Alura"></h1>
+                <h1><img src="img/logo.png" alt="Logo da barbearia Alura"></h1>
                 <nav>
                     <ul>
                         <li><a href="index.html">Home</a></li>
@@ -92,8 +92,8 @@
             </table>
         </main>
         <footer>
-            <img src="assets/img/logo-branco.png" alt="Logo da barbearia Alura">
-            <p class="Copyright">&copy;Copyright Barbearia Alura - 2021</p>
+            <img src="logo-branco.png" alt="Logo da barbearia Alura">
+            <p class="copyright">&copy;Copyright Barbearia Alura - 2023 feito por Fernando Vanelli</p>
         </footer>
     </body>
 </html>
