--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         </main>
         <footer>
             <img src="img/logo-branco.png" alt="Logo da Barbearia Alura">
-            <p class="copyright">&copy;Copyright Barbearia Alura -2021</p>
+            <p class="copyright">&copy;Copyright Barbearia Alura -2023 Fernando Vanelli</p>
         </footer>
     </body>
 </html>
