aula 13/12 projeto final

--- a/produtos.html
+++ b/produtos.html
@@ -4,19 +4,19 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width">
         <title>Produtos | Barbearia Alura</title>
-        <link rel="stylesheet" href="assets/css/reset.css">
-        <link rel="stylesheet" href="assets/css/header.css">
-        <link rel="stylesheet" href="assets/css/footer.css">
-        <link rel="stylesheet" href="assets/css/produtos.css">
-        <link rel="stylesheet" href="assets/css/medias.css">
-        <link rel="stylesheet" href="assets/css/body.css">
+        <link rel="stylesheet" href="reset.css">
+        <link rel="stylesheet" href="header.css">
+        <link rel="stylesheet" href="footer.css">
+        <link rel="stylesheet" href="produtos.css">
+        <link rel="stylesheet" href="medias.css">
+        <link rel="stylesheet" href="body.css">
         <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
     </head>
     <body>
         <header>
             <a href="#conteudoPrincipal">Pular para o conteúdo principal</a>
             <div class="caixa">
-                <img src="assets/img/logo.png" alt="Logo da barbearia Alura">
+                <img src="logo.png" alt="Logo da barbearia Alura">
                 <nav>
                     <ul>
                         <li><a href="index.html">Home</a></li>
@@ -30,19 +30,19 @@
             <ul class="produtos">
                 <li>
                     <h1>Cabelo</h1>
-                    <img src="assets/img/cabelo.jpg" alt>
+                    <img src="img/cabelo.jpg" alt>
                     <h2 class="produto-descricao">Na tesoura ou na máquina, como o cliente preferir</h2>
                     <h3 class="produtos-preco">R$ 25,00</h3>
                 </li>
                 <li>
                     <h1>Barba</h1>
-                    <img src="assets/img/barba.jpg">
+                    <img src="img/barba.jpg">
                     <h2   class="produto-descricao">Corte e desenho profissional de barba</h2>
                     <h3 class="produtos-preco">R$ 18,00</h3>
                 </li>
                 <li>
                     <h1>Cabelo + Barba</h1>
-                    <img src="assets/img/cabelo+barba.jpg">
+                    <img src="img/cabelo+barba.jpg">
                     <h2 class="produto-descricao">Pacote completo de cabelo e barba</h2>
                     <h3 class="produtos-preco">R$ 35,00</h3>
                 </li>
@@ -51,7 +51,7 @@
 
         <footer>
             <img src="assets/img/logo-branco.png" alt="Logo barbearia Alura">
-            <p class="Copyright">&copy;Copyright Barbearia Alura - 2021</p>
+            <p class="Copyright">&copy;Copyright Barbearia Alura - 2023 Fernando Vanelli</p>
         </footer>
     </body>
 </html>
