--- a/produtos.html
+++ b/produtos.html
@@ -50,7 +50,7 @@
         </main>
 
         <footer>
-            <img src="assets/img/logo-branco.png" alt="Logo barbearia Alura">
+            <img src="img/logo-branco.png" alt="Logo barbearia Alura">
             <p class="Copyright">&copy;Copyright Barbearia Alura - 2023 Fernando Vanelli</p>
         </footer>
     </body>
