aula 13/12 projeto final #3

--- a/produtos.html
+++ b/produtos.html
@@ -16,7 +16,7 @@
         <header>
             <a href="#conteudoPrincipal">Pular para o conteúdo principal</a>
             <div class="caixa">
-                <img src="logo.png" alt="Logo da barbearia Alura">
+                <img src="img/logo.png" alt="Logo da barbearia Alura">
                 <nav>
                     <ul>
                         <li><a href="index.html">Home</a></li>
