--- a/contato.html
+++ b/contato.html
@@ -92,7 +92,7 @@
             </table>
         </main>
         <footer>
-            <img src="logo-branco.png" alt="Logo da barbearia Alura">
+            <img src="img/logo-branco.png" alt="Logo da barbearia Alura">
             <p class="copyright">&copy;Copyright Barbearia Alura - 2023 feito por Fernando Vanelli</p>
         </footer>
     </body>
