--- a/produtos.html
+++ b/produtos.html
@@ -51,7 +51,7 @@
 
         <footer>
             <img src="img/logo-branco.png" alt="Logo barbearia Alura">
-            <p class="Copyright">&copy;Copyright Barbearia Alura - 2023 Fernando Vanelli</p>
+            <p class="copyright">&copy;Copyright Barbearia Alura - 2023 Fernando Vanelli</p>
         </footer>
     </body>
 </html>
