--- a/produtos.html
+++ b/produtos.html
@@ -2,56 +2,51 @@
 <html lang="pt-br">
     <head>
         <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width">
-        <title>Produtos | Barbearia Alura</title>
+        <title>Produtos - Barbearia Alura</title>
         <link rel="stylesheet" href="reset.css">
-        <link rel="stylesheet" href="header.css">
-        <link rel="stylesheet" href="footer.css">
         <link rel="stylesheet" href="produtos.css">
-        <link rel="stylesheet" href="medias.css">
-        <link rel="stylesheet" href="body.css">
-        <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
     </head>
     <body>
         <header>
-            <a href="#conteudoPrincipal">Pular para o conteúdo principal</a>
-            <div class="caixa">
-                <img src="img/logo.png" alt="Logo da barbearia Alura">
+            <div class="caixa" >  
+                <h1><img src="img/logo.png"></h1>
                 <nav>
                     <ul>
-                        <li><a href="index.html">Home</a></li>
-                        <li><a href="produtos.html">Produtos</a></li>
-                        <li><a href="contato.html">Contato</a></li>
+                        <li> <a href="index.html">  Home </a> </li>
+                        <li> <a href="produtos.html"> Produtos </a> </li>
+                        <li> <a href="contato.html"> Contato </a> </li>
                     </ul>
                 </nav>
             </div>
         </header>
+
         <main>
-            <ul class="produtos">
+            <ul class="produtos" >
                 <li>
-                    <h1>Cabelo</h1>
-                    <img src="img/cabelo.jpg" alt>
-                    <h2 class="produto-descricao">Na tesoura ou na máquina, como o cliente preferir</h2>
-                    <h3 class="produtos-preco">R$ 25,00</h3>
+                    <h2> Cabelo </h2>
+                    <img src="img/cabelo.jpg" alt="">
+                    <p class="produto-descricao" > Na tesoura ou máquina, como o cliente preferir </p>
+                    <p class="produto-preco"> R$ 35,00 </p>
                 </li>
                 <li>
-                    <h1>Barba</h1>
-                    <img src="img/barba.jpg">
-                    <h2   class="produto-descricao">Corte e desenho profissional de barba</h2>
-                    <h3 class="produtos-preco">R$ 18,00</h3>
+                    <h2> Barba </h2>
+                    <img src="img/barba.jpg" alt="">
+                    <p class="produto-descricao" > Corte e desenho profissional </p>
+                    <p class="produto-preco" > R$ 25,00 </p>
                 </li>
                 <li>
-                    <h1>Cabelo + Barba</h1>
-                    <img src="img/cabelo+barba.jpg">
-                    <h2 class="produto-descricao">Pacote completo de cabelo e barba</h2>
-                    <h3 class="produtos-preco">R$ 35,00</h3>
+                    <h2> Cabelo + Barba </h2>
+                    <img src="img/cabelo+barba.jpg" alt="">
+                    <p class="produto-descricao" > Pacote completo de cabelo e barba</p>
+                    <p class="produto-preco" > R$ 50,00 </p>
                 </li>
             </ul>
         </main>
 
         <footer>
-            <img src="img/logo-branco.png" alt="Logo barbearia Alura">
-            <p class="copyright">&copy;Copyright Barbearia Alura - 2023 Fernando Vanelli</p>
+            <img src="img/logo-branco.png" alt="">
+            <p class="copyright"> &copy; Copyright Barbearia Alura - 2023 por Gerson Cesar Grobe de Miranda</p>
         </footer>
+
     </body>
 </html>
